# model-regression-detection

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml  test.yml
docs/: ADR-001-modular-monolith.md  ADR-002-scoring.md  ADR-003-thresholds-in-pp.md
examples/: example_run.py
golden/: customer_support.jsonl
prompts/: customer_support.yaml
src/model_regression/: __init__.py  cli.py  config.py  dataset.py  db.py  logging.py  models.py
src/model_regression/ci/: __init__.py  github.py
src/model_regression/eval/: __init__.py  llm_client.py  runner.py  scorers.py
src/model_regression/prompts/: __init__.py  manager.py
src/model_regression/reporting/: __init__.py  _template.py  comparator.py  drift.py  html_report.py  slack.py
tests/: conftest.py  test_comparator.py  test_config.py  test_dataset.py  test_dataset_more.py  test_db.py  test_drift.py  test_github_ci.py  test_logging.py  test_models.py  test_prompts.py  test_reporting.py  test_runner.py  test_scorers.py  test_slack_and_html.py
