[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "model-regression-detection"
version = "0.1.0"
description = "CI/CD-style regression detection pipeline for LLM-powered features. Catches quality drops on prompt or model changes before they reach users."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "metehanulusoy", email = "ulusoy.metehan03@gmail.com" },
]
keywords = ["llm", "evaluation", "regression-testing", "ci-cd", "openai", "prompt-engineering", "ai-ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "click>=8.1",
    "jinja2>=3.1",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.32"]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML",
]

[project.scripts]
mrd = "model_regression.cli:main"

[project.urls]
Homepage = "https://github.com/metehanulusoy/model-regression-detection"
Issues = "https://github.com/metehanulusoy/model-regression-detection/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/model_regression"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["model_regression"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",               # isort
    "B",               # bugbear
    "UP",              # pyupgrade
    "SIM",             # simplify
    "RUF",             # ruff-specific
    "ASYNC",           # async correctness
]
ignore = ["E501"]  # line length handled by formatter
